[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Maintain"
documentation = "https://Documentation.Maintain.Editor.Land"
edition = "2021"
homepage = "https://Maintain.Editor.Land"
license-file = "LICENSE"
name = "Maintain"
publish = false
repository = "https://github.com/CodeEditorLand/CargoMaintain"
version = "0.0.1"

[[bin]]
name = "Maintain"
path = "Source/Fn/Binary/Maintain.rs"

[lib]
name = "Library"
path = "Source/Library.rs"

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
git2 = "0.19.0"
proc_use = "0.2.1"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
